--- a/Pillow/index.html
+++ b/Pillow/index.html
@@ -11,7 +11,7 @@
 <body>
 
    <header>
-      <li><a href="index.html"><img class="logo" src="Imgs/pillolw.png" alt="logo"></a></li>
+      <li><a href="index.html"><img class="logo" src="imgs/pillolw.png" alt="logo"></a></li>
         <nav>
             <ul class="nav-links">
                  <li><a href="buy.html">Buy</a></li>
@@ -41,7 +41,7 @@
                  That's why we offer a wide range of pillows to suit every need.</p> 
               </div>
               <div class="sleep-img">
-                <img src="Imgs/sleeping zena.jpg" alt="sleeping person">
+                <img src="imgs/sleeping zena.jpg" alt="sleeping person">
             </div>
         </div>
  </section>
@@ -49,7 +49,7 @@
  <section>
     <div class="importance">
         <div class="importance-img">
-            <img src="Imgs/spici guy.jpg" alt="sleeping person">
+            <img src="imgs/spici guy.jpg" alt="sleeping person">
         </div>
         <div class="importance-text">
           <h2><strong>Importance </strong> of quality sleep</h2>
