--- a/Pillow/visitus.html
+++ b/Pillow/visitus.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="Imgs/pillolw.png" alt="logo"></a>
+        <a href="index.html"><img class="logo" src="imgs/pillolw.png" alt="logo"></a>
         <nav>
             <ul class="nav-links">
                  <li><a href="buy.html">Buy</a></li>
